Added fully filtered GDELT data from 2000 to 2016
Also added possibility of downloading all data and saving it to RDS
(year by year). It totals about 440Mb and takes a whole day to
download/ingest/filter.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 data/gdelt/
+*.Rhistory
+*.Rdata
+data/gdelt_2000.rds
+data/gdelt_2001.rds
+data/gdelt_2002.rds
+data/gdelt_2003.rds
+data/gdelt_2004.rds
+data/gdelt_2005.rds
+data/gdelt_2006.rds
+data/gdelt_2007.rds
+data/gdelt_2008.rds
+data/gdelt_2009.rds
+data/gdelt_2010.rds
+data/gdelt_2011.rds
+data/gdelt_2012.rds
+data/gdelt_2013.rds
+data/gdelt_2014.rds
+data/gdelt_2015.rds
+data/gdelt_2016.rds
